<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/frameLayout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/black"
                                             tools:context="com.sony.svpa.rf4ceprototype.fragments.RFZRCOneFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/text_view_open_remote_setting"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="164dp"
        android:padding="10dp"
        android:text="@string/press_the_system_info"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_selector"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/label_ok"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/label_cancel"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginBottom="216dp"
        android:layout_marginStart="136dp"
        android:src="@drawable/dish_sys_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
