<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    tools:context="com.sony.svpa.rf4ceprototype.fragments.RFZRCOneFragment">



    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/transparent_black_color"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.362">

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_selector"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/label_yes"/>

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/label_no"/>
        </LinearLayout>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="156dp"
            android:layout_height="363dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="567dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="187dp"
            android:layout_height="103dp"
            android:layout_marginEnd="96dp"
            android:layout_marginTop="84dp"
            android:gravity="left"
            android:text="@string/can_you_change_channel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
